Minor ui bug fix on mobile

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -199,10 +199,7 @@ input {
         }
 
         &__btn {
-            right: 0;
-            top: 10px;
             cursor: pointer;
-            position: absolute;
         }
     }
 }
